Allow to sort safebox items by name and creation date
This code is created with the clear intention of extending it with other
functionalities such as pagination or filtering.

In case an invalid parameter is provided, a bad request (400) is
returned, as stated in JSON:API specification.

References:

* https://jsonapi.org/format/#fetching-sorting
* https://docs.rubocop.org/rubocop-performance/cops_performance.html#performancesum
